# MDTrans

./: .gitignore  README.md  config.json  pyproject.toml  run.py
.reasonix/skills/bump-version/: SKILL.md
assert/: 技术要求2 - 优化.docx  技术要求2 - 优化.md  技术要求2.docx  技术要求2.md
scripts/: setup_dev.py  sync_version.py
src/mdtrans/: __about__.py  __init__.py  __main__.py  main.py
src/mdtrans/app/: interface.py  navigator.py
src/mdtrans/export_services/services/: svc_md_to_docx.py  svc_md_to_html.py  svc_md_to_image.py  svc_md_to_pdf.py
src/mdtrans/export_services/styles/: __init__.py  css_adapter.py  definitions.py  docx_adapter.py
src/mdtrans/export_services/utils/: __init__.py  image_utils.py  mermaid_utils.py  pandoc_utils.py
src/mdtrans/export_ui/: app.py  conversion.py
src/mdtrans/gui/: _config.py  _dialogs.py  _gui_helpers.py  _theme_manager.py  _version.py
src/mdtrans/import_ui/: app.py
tests/: test_version_consistency.py
